--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "wepy": "^1.6.0",
     "wepy-async-function": "^1.4.4",
     "wepy-com-toast": "^1.0.2",
+    "wepy-plugin-imagemin": "^1.5.3",
     "wepy-redux": "^1.5.3"
   },
   "devDependencies": {
@@ -45,7 +46,10 @@
     "eslint-plugin-standard": "^2.0.1",
     "wepy-compiler-babel": "^1.5.1",
     "wepy-compiler-less": "^1.3.10",
+    "wepy-compiler-sass": "^1.3.7",
     "wepy-eslint": "^1.5.3",
-    "wepy-compiler-sass": "^1.3.7"
+    "wepy-plugin-autoprefixer": "^1.5.10",
+    "wepy-plugin-filemin": "^1.3.12",
+    "wepy-plugin-uglifyjs": "^1.3.7"
   }
 }
