--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@minui/wxc-icon": "^1.0.8",
     "@minui/wxc-toast": "^1.0.8",
     "babel-plugin-syntax-export-extensions": "^6.13.0",
+    "promise-polyfill": "^7.1.2",
     "redux": "^3.7.2",
     "redux-actions": "^2.2.1",
     "redux-promise": "^0.5.3",
