--- a/package.json
+++ b/package.json
@@ -21,11 +21,12 @@
     "@minui/wxc-icon": "^1.0.8",
     "@minui/wxc-toast": "^1.0.8",
     "babel-plugin-syntax-export-extensions": "^6.13.0",
+    "node-sass": "^4.10.0",
     "promise-polyfill": "^7.1.2",
     "redux": "^3.7.2",
     "redux-actions": "^2.2.1",
     "redux-promise": "^0.5.3",
-    "wepy": "^1.6.0",
+    "wepy": "^1.7.2",
     "wepy-async-function": "^1.4.4",
     "wepy-com-toast": "^1.0.2",
     "wepy-plugin-imagemin": "^1.5.3",
